# custom-exception-packageORA

./: README.md
ora_exception_lib/: README.md  pyproject.toml
ora_exception_lib/ora_exception_lib/: __init__.py  config.py  errors.py
ora_exception_lib/ora_exception_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ora_exception_lib/ora_exception_lib/resources/: exception-application.yml
ora_exception_lib/ora_exception_lib/resources/locale/: messages_en.yml  messages_hi.yml
